Using Evaluator Process to generate Evaluator task commandline